syntax = "proto3";
package dynamic_setting;
option go_package = "github.com/featureguards/featureguards-go/v2/proto/dynamic_setting";
import "google/protobuf/timestamp.proto";
import "shared/user.proto";
import "shared/platform.proto";

message DynamicSettingHistory {
  repeated DynamicSetting history = 1;
}

message DynamicSetting {
  enum Type {
    BOOL = 0;
    STRING = 1;
    INTEGER = 2;
    FLOAT = 3;
    SET = 4;
    MAP = 5;
    LIST = 6;
  }

  string id = 1;  // Read-only
  string name = 2;
  Type setting_type = 3;  // Set once.
  int64 version = 4;      // Read-only.
  string description = 6;
  repeated platform.Type platforms = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp deleted_at = 10;
  string project_id = 11;
  user.User created_by = 12;
  user.User updated_by = 13;

  oneof SettingDefinition {
    BoolValue bool_value = 20;
    StringValue string_value = 21;
    IntegerValue integer_value = 22;
    FloatValue float_value = 23;
    SetValues set_values = 24;
    MapValues map_values = 25;
    ListValues list_values = 26;
  }
}

enum PrimitiveType {
  BOOL = 0;
  STRING = 1;
  INTEGER = 2;
  FLOAT = 3;
}

message BoolValue {
  bool value = 1;
}

message IntegerValue {
  int64 value = 1;
}

message StringValue {
  string value = 1;
}

message FloatValue {
  float value = 1;
}

message SetValues {
  oneof Value {
    bool bool_value = 20;
    string string_value = 21;
    int64 integer_value = 22;
    float float_value = 23;
  }

  PrimitiveType type = 1;
  repeated PrimitiveValue values = 2;
}

message ListValues {
  oneof Value {
    bool bool_value = 20;
    string string_value = 21;
    int64 integer_value = 22;
    float float_value = 23;
  }

  PrimitiveType type = 1;
  repeated PrimitiveValue values = 2;
}

message PrimitiveValue {
  oneof Value {
    bool bool_value = 20;
    string string_value = 21;
    int64 integer_value = 22;
    float float_value = 23;
  }
}

message KeyValue {
  string key = 1;
  PrimitiveValue value = 2;
}

message MapValues {
  PrimitiveType type = 1;
  repeated KeyValue key_values = 2;
}